# huum-cli

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
specs/001-a-simple-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-a-simple-cli/checklists/: requirements.md
specs/001-a-simple-cli/contracts/: cli-commands.md  huum-api.md
src/huum_cli/: cli.py
src/huum_cli/api/: client.py  models.py
src/huum_cli/commands/: auth.py  start.py  statistics.py  status.py  stop.py
src/huum_cli/utils/: formatters.py  plot.py  storage.py  validators.py
