[project]
name = "huum-cli"
version = "0.1.0"
description = "CLI for managing Huum sauna devices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Tom Dyson", email = "tom@torchbox.com" }
]
keywords = ["sauna", "huum", "cli", "smart-home", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "keyring>=25.0.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/tomdyson/huum-cli"
Repository = "https://github.com/tomdyson/huum-cli"
Issues = "https://github.com/tomdyson/huum-cli/issues"

[project.scripts]
huum = "huum_cli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.0",
]
